--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,13 +20,13 @@
     "python.testing.pytestEnabled": true,
     "[python]": {
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true
+            "source.organizeImports": "explicit"
         },
         "editor.tabSize": 4,
         "editor.rulers": [
             88
         ],
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.defaultFormatter": "charliermarsh.ruff"
     },
     "[markdown]": {
         "files.trimTrailingWhitespace": false
